Fixed problems with recent update and officially completed addition of custom projectile modularization